[package]
name = "gmsh-sys"
description = "Low-level bindings to the Gmsh API"
homepage = "https://github.com/mxxo/gmsh-sys"
documentation = "https://mxxo.github.io/gmsh-sys/gmsh_sys/index.html"

version = "0.1.2"
authors = ["Max Orok <morok@mevex.com>"]
edition = "2018"
license-file =  "LICENSE.txt"

readme = "README.md"
keywords = ["ffi", "Gmsh"]
categories = ["external-ffi-bindings", "science", "simulation", "visualization"]

# requires the gmsh library
links = "gmsh"
build = "build.rs"

[build-dependencies]
pkg-config = "0.3.16"

[badges]
maintenance = { status = "experimental" }
